# LinuxSeurityMonitor

./: CMakeLists.txt  Interface.h  build_bpf.sh  probe.bpf.c
.github/workflows/: build.yml
MainApp/: CMakeLists.txt  main.cpp
Plugin/: CMakeLists.txt  Plugin.cpp
